--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-route.js"></script>
         
-		<script src="app.js"></script>
-		<script src="components/monitor.js"></script>
+		<script src="src/app.js"></script>
+		<script src="src/components/monitor.js"></script>
 	<body>
 </html>
