Added initial components and services for the Monitor page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.2/angular-route.js"></script>
         
 		<script src="src/app.js"></script>
-		<script src="src/components/monitor.js"></script>
+        
+		<script src="src/components/common/DTA.js"></script>
+		<script src="src/components/common/grid.js"></script>
+		<script src="src/components/monitor/monitor.js"></script>
+		<script src="src/components/monitor/filter.js"></script>
 	<body>
 </html>
