--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
 		<script src="src/components/common/grid.js"></script>
 		<script src="src/components/monitor/monitor.js"></script>
 		<script src="src/components/monitor/filter.js"></script>
+		<script src="src/components/monitor/orders.js"></script>
+		<script src="src/components/monitor/routes.js"></script>
+		<script src="src/components/monitor/fills.js"></script>
 	<body>
 </html>
