Bugfix: missing script import for criteria.js

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 		<script src="src/components/monitor/orders.js"></script>
 		<script src="src/components/monitor/routes.js"></script>
 		<script src="src/components/monitor/fills.js"></script>
+		<script src="src/components/monitor/criteria.js"></script>
 	<body>
 </html>
