Introduced session expiration feature

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
     <head>
         <title>TCA</title>
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-notification/0.3.5/angular-ui-notification.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <style>
+            body {
+               font-family: 'Roboto', sans-serif; 
+            }
+        </style>
     </head>
 	<body>
         <tca-app>Loading...</tca-app>
