--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <script src="node_modules/ag-grid/dist/ag-grid.js"></script>
         
 		<script src="src/app.js"></script>
+		<script src="src/auth/authChecks.js"></script>
 
         <script src="src/components/layout/layout.js"></script>
 		<script src="src/components/layout/footer.js"></script>
