Improved login. Properly destroying streams.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>TCA</title>
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-notification/0.3.5/angular-ui-notification.min.css">
+        <link href="style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <style>
             body {
@@ -34,6 +35,9 @@
 
 		<script src="src/components/common/DTA.js"></script>
 		<script src="src/components/common/grid.js"></script>
+		<script src="src/components/common/authService.js"></script>
+        
+		<script src="src/components/login/login.js"></script>
         
 		<script src="src/components/monitor/monitor.js"></script>
 		<script src="src/components/monitor/filter.js"></script>
