--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-idle/1.3.2/angular-idle.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-notification/0.3.5/angular-ui-notification.js"></script>
 
-        <script src="node_modules/ag-grid/dist/ag-grid.js"></script>
+<!--        <script src="node_modules/ag-grid/dist/ag-grid.js"></script>-->
+        <script src="node_modules/ag-grid-enterprise/dist/ag-grid-enterprise.js"></script>
         
 		<script src="src/app.js"></script>
 		<script src="src/auth/authChecks.js"></script>
