--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		<script src="src/components/common/DTA.js"></script>
 		<script src="src/components/common/grid.js"></script>
 		<script src="src/components/common/authService.js"></script>
+		<script src="src/components/common/session.js"></script>
         
 		<script src="src/components/login/login.js"></script>
         
