Refactoring, moved "helper" code to utils.js

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		<script src="src/components/common/grid.js"></script>
 		<script src="src/components/common/authService.js"></script>
 		<script src="src/components/common/session.js"></script>
+		<script src="src/components/common/utils.js"></script>
         
 		<script src="src/components/login/login.js"></script>
         
