Refactoring: moved code into multiple files

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		<script src="src/components/common/authService.js"></script>
 		<script src="src/components/common/session.js"></script>
 		<script src="src/components/common/utils.js"></script>
+		<script src="src/components/common/filtering.js"></script>
         
 		<script src="src/components/login/login.js"></script>
         
@@ -48,6 +49,8 @@
 		<script src="src/components/monitor/orders.js"></script>
 		<script src="src/components/monitor/routes.js"></script>
 		<script src="src/components/monitor/fills.js"></script>
+		<script src="src/components/monitor/criteria.js"></script>
+		<script src="src/components/monitor/resourceManager.js"></script>
 		
 	<body>
 </html>
